kubernetes/apps/longhorn-system/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://stg-oauth2-proxy.piny940.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://stg-oauth2-proxy.piny940.com/oauth2/start?rd=$escaped_request_uri"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stg-longhorn.piny940.com
      secretName: cluster-tls
  rules:
    - host: stg-longhorn.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
